--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= @car.price %>
+<p><%= "Range: #{@car.range}" %></p>
 <%= link_to 'Edit', edit_car_path(@car) %> |
 <%= link_to 'Back', cars_path %>
